# WeatherApplication

weathercli/: CMakeLists.txt  readme.txt
weathercli/include/: config.h  curl_utils.h  location_service.h  weather_fetcher.h
weathercli/src/: curl_utils.cpp  location_service.cpp  main.cpp  weather_fetcher.cpp
